[tool.poetry]
name = "git-gateway"
version = "0.1.0"
description = ""
authors = ["Elijah Wilson <eli@noteable.io>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.88.0"
hypercorn = "^0.14.3"
uvloop = "^0.17.0"
structlog = "^22.3.0"
pygit2 = "^1.11.1"

[tool.poetry.group.dev.dependencies]
black = {extras = ["d"], version = "^22.10.0"}
isort = "^5.10.1"
ipython = "^8.7.0"
ipdb = "^0.13.9"
ruff = "^0.0.191"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100

[tool.ruff.isort]
known-third-party = ["fastapi", "pydantic", "starlette"]

[tool.isort]
profile = "black"
known_third_party = ["fastapi", "pydantic", "starlette"]
